# quotephile

./: .gitignore  Makefile  README.md  TODO.md  db.env  db.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml
Quote Collector/Quote Collector.xcodeproj/: project.pbxproj
Quote Collector/Quote Collector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Quote Collector/Quote Collector/App/: QuoteCollectorApp.swift
Quote Collector/Quote Collector/CoreData/: PersistenceManager.swift
Quote Collector/Quote Collector/Utility/: Utility.swift
Quote Collector/Quote Collector/View/: ContentView.swift
QuoteCollector/QuoteCollector/: Persistence.swift  QuoteCollectorApp.swift
QuoteCollector/QuoteCollector.xcodeproj/: project.pbxproj
QuoteCollector/QuoteCollector/App/: QuoteCollectorApp.swift
QuoteCollector/QuoteCollector/CoreData/: DatabaseFunctions.swift  PersistenceManager.swift
QuoteCollector/QuoteCollector/Model/: ModelData.swift  Quote+CoreDataClass.swift  Quote.swift  QuoteCollection+CoreDataClass.swift  QuoteCollection.swift  QuoteCollectionSort.swift  QuoteCollectionValues.swift  QuoteSort.swift  QuoteValues.swift  Sort.swift
QuoteCollector/QuoteCollectorTests/: QuoteCollectorTests.swift
QuoteCollector/QuoteCollectorUITests/: QuoteCollectorUITests.swift  QuoteCollectorUITestsLaunchTests.swift
Quotephile/Quotephile/: Info.plist
Quotephile/Quotephile.xcodeproj/: project.pbxproj
Quotephile/Quotephile/App/: QuotephileApp.swift
public/: app.py  index.html
src/: App.tsx
src/common/: constants.tsx  helpers.tsx  types.tsx
(+116 files in other folders)
